--- a/Project2/src/index.html
+++ b/Project2/src/index.html
@@ -6,8 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>Webpack THREE.js</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <canvas class="webgl"></canvas>
+    <h1 class="title">Lets spine the Globe</h1>
   </body>
 </html>
